# da4ml

./: pyproject.toml
src/da4ml/_binary/cmvm/: bindings.cc
src/da4ml/codegen/hls/source/: build_vivado_hls_prj.tcl
src/da4ml/codegen/rtl/common_source/: build_vivado_prj.tcl
tools/: gitversion.py
