[build-system]
build-backend = "mesonpy"

requires = [
  "meson-python>=0.13.1",
  "numpy>=2",
  "typing-extensions; python_version<'3.11'",
]

[project]
name = "da4ml"
description = "Distributed Arithmetic for Machine Learning"
readme = "README.md"
keywords = [
  "CMVM",
  "distributed arithmetic",
  "high-level synthesis",
  "HLS Complier",
  "machine learning",
  "RTL Generator",
]

license = { text = "GNU Lesser General Public License v3 (LGPLv3)" }
authors = [ { name = "Chang Sun", email = "chsun@cern.ch" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [ "numpy>=2", "quantizers>=1,<2" ]
optional-dependencies.docs = [
  "myst-parser",
  "pyparsing",
  "sphinx",
  "sphinx-rtd-theme",
]
optional-dependencies.tests = [
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-sugar",
  "pytest-xdist",
]
urls.repository = "https://github.com/calad0i/da4ml"
scripts.da4ml = "da4ml._cli:main"
entry-points."dais_tracer.plugins".da4ml = "da4ml.converter.example:ExampleDAISTracer"

[tool.ruff]
target-version = "py310"

line-length = 130
indent-width = 4

include = [ "src/**/*.py" ]

format.indent-style = "space"
format.quote-style = "single"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = 130
format.docstring-code-format = true
lint.select = [ "E", "F", "F401", "I", "W" ]
lint.ignore = [ "E501", "E731", "E741", "F403", "F405" ]
lint.explicit-preview-rules = true
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]

[tool.pytest.ini_options]
env = [ "DA_DEFAULT_THREADS=1" ]

addopts = [
  "--import-mode=importlib",
  "--cov=src/da4ml",
  "--cov-report=xml",
  "--cov-report=html",
]

[tool.coverage.report]
exclude_also = [ 'no cover: start(?s:.)*?no cover: stop', 'raise ValueError' ]
[tool.coverage.run]
omit = [ "*/_version.py", "src/da4ml/_cli/*.py" ]
